Almost done except Links share dialog and drawer

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </head>
 
 <body>
-  <div class="h-screen w-screen md:w-[calc(100vw_-_(16_*_2px))] md:px-[16px] relative" id="root"></div>
+  <div class="h-screen w-screen md:px-[16px] relative font-kite overflow-x-hidden" id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
