Fixed horizontal overflow in chromium based browsers.

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
   <title>Kazuma's Portfolio</title>
 </head>
 
-<body>
-  <div class="w-screen md:px-[16px] relative font-kite overflow-x-hidden" id="root"></div>
+<body class="overflow-x-hidden">
+  <div class="w-screen md:mx-[16px] relative font-kite" id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
